# fmatio

./: CMakeLists.txt  license.md  readme.md
include/: fmatio.hpp
tests/: CMakeLists.txt
tests/usage_tests/: CMakeLists.txt  main.cpp
